--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
     </a>
    </section>
 
+    <!-- Spotify-style banner -->
+  <div class="spotify-banner">
+    <div class="banner-content">
+      <h2>More coming soon!</h2>
+    </div>
+  </div>
+
    <nav class="bottom-nav">
     <a href="#">
       <img src="https://i.imgur.com/zn9fr19.png" alt="Home" class="nav-icon">
