--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <p>Te quiero Gubi</p>
     </a>
 
-    <a class="video-card" href="https://youtu.be/xZpDHv53XEk" target="_blank">
+    <a class="video-card" href="https://youtube.com/shorts/o51hosiBPTs" target="_blank">
       <img src="https://i.imgur.com/nsGYKqO.jpeg" alt="De Mamá">
       <h2>De Mamá</h2>
       <p>A little message from mamá</p>
     </a>
 
-    <a class="video-card" href="https://www.youtube.com/watch?v=H1b5Q9z0tWI" target="_blank">
+    <a class="video-card" href="https://youtube.com/shorts/nCjpw1xoXYk" target="_blank">
       <img src="https://i.imgur.com/Q4o3era.jpeg" alt="From Cami">
       <h2>From Cami</h2>
       <p>I love you a lot Ceci, don't ever forget that</p>
@@ -53,7 +53,7 @@
       <p>I love you!!</p>
     </a>
 
-    <a class="video-card" href="https://youtube.com/shorts/Z4dmv7VjejU" target="_blank">
+    <a class="video-card" href="https://youtube.com/shorts/yRbErBqLmxY" target="_blank">
       <img src="https://i.imgur.com/Bk8YwQG.jpeg" alt="From Justin">
       <h2>From Justin</h2>
       <p>I love you Cecilia! Make good choices!</p>
